--- a/BountyHunter/Base.lproj/Main.storyboard
+++ b/BountyHunter/Base.lproj/Main.storyboard
@@ -51,10 +51,29 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="U8i-7T-DDx"/>
+                    <connections>
+                        <segue destination="ax6-KY-eYE" kind="show" identifier="localizar" id="NjV-I6-sCa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="802" y="-8"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="1hU-sg-k0Q">
+            <objects>
+                <viewController id="ax6-KY-eYE" customClass="MapViewController" customModule="BountyHunter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AM4-Zq-aVd">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="paB-Ow-hqg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="XjZ-Rz-5ny"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gIn-Tr-IIJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1665" y="-8"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="71A-6E-bZQ">
