--- a/BountyHunter/Base.lproj/Main.storyboard
+++ b/BountyHunter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FTb-en-Toz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="x1y-iG-Nyd">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -38,7 +38,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pbI-Hh-oCb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-50" y="-8"/>
+            <point key="canvasLocation" x="875.57251908396938" y="-8.4507042253521139"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -57,7 +57,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="802" y="-8"/>
+            <point key="canvasLocation" x="1727.4809160305342" y="-8.4507042253521139"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="1hU-sg-k0Q">
@@ -73,12 +73,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gIn-Tr-IIJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1665" y="-8"/>
+            <point key="canvasLocation" x="2591.6030534351144" y="-8.4507042253521139"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Fugitives-->
         <scene sceneID="71A-6E-bZQ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FTb-en-Toz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Fugitives" id="9pe-b5-0W1"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7Gs-Gn-YyW">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -91,7 +92,41 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eKK-2W-Kxu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-0.76335877862595414" y="-8.4507042253521139"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="taq-CD-dhW">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="x1y-iG-Nyd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jZx-hp-PfE">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="FTb-en-Toz" kind="relationship" relationship="viewControllers" id="aZv-PE-uuE"/>
+                        <segue destination="5FF-Yt-cYy" kind="relationship" relationship="viewControllers" id="G9S-rv-cnk"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TYX-YH-ewf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="-927.48091603053433" y="-8.4507042253521139"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="7y7-kD-zmC">
+            <objects>
+                <viewController id="5FF-Yt-cYy" customClass="ProfileViewController" customModule="BountyHunter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8RM-0F-yNI">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="pcO-DW-Oxd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="QD3-8U-5pg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X24-pO-f2P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-927" y="725"/>
         </scene>
     </scenes>
     <resources>
